overflow x problem resolved

--- a/src/App.css
+++ b/src/App.css
@@ -627,7 +627,9 @@ display: none;
 
     }
 @media only screen and (max-width: 771px) {
-
+body, html{
+  overflow-x: hidden !important;
+}
 
   .home {
    display: flex; 
